NetBSD Problem Report #20032

Received: (qmail 15535 invoked by uid 605); 24 Jan 2003 13:43:42 -0000
Message-Id: <20030124134302.894BD19AC7@dmath5.geometrie.tuwien.ac.at>
Date: Fri, 24 Jan 2003 14:43:02 +0100 (CET)
From: wiz@netbsd.org
Sender: gnats-bugs-owner@netbsd.org
Reply-To: wiz@netbsd.org
To: gnats-bugs@gnats.netbsd.org
Subject: libcurses: KEY_RESIZE missing
X-Send-Pr-Version: 3.95

>Number:         20032
>Category:       lib
>Synopsis:       libcurses: KEY_RESIZE missing
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    jdc
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Jan 24 13:44:00 +0000 2003
>Closed-Date:    Fri Mar 26 21:30:38 +0000 2004
>Last-Modified:  Fri Mar 26 21:30:38 +0000 2004
>Originator:     Thomas Klausner
>Release:        NetBSD 1.6L
>Organization:

>Environment:
all
>Description:
libcurses does not provide a definition for KEY_RESIZE.
ncurses defines this.
>How-To-Repeat:
Try to build ekg, zile, nhc98 with native curses.
>Fix:
Not provided.
>Release-Note:
>Audit-Trail:

From: Julian Coleman <jdc@coris.demon.co.uk>
To: wiz@netbsd.org, gnats-bugs@netbsd.org
Cc: blymn@netbsd.org
Subject: Re: lib/20032: libcurses: KEY_RESIZE missing
Date: Mon, 31 Mar 2003 22:26:01 +0100

 > libcurses does not provide a definition for KEY_RESIZE.
 > ncurses defines this.

 If ncurses has been configured with SIGWINCH support, it will call
 ungetch(KEY_RESIZE).  When the application later calls getch(), it will
 receive KEY_RESIZE, so it will know to resize the screen.

 I'm not sure that we should have a SIGWINCH handler inside libcurses.
 Therefore, we can define KEY_RESIZE but an application will never see it.
 Mind you, if ncurses is not configured with a handler, the same will
 happen there.

 There doesn't appear to be a way to tell if ncurses has installed the
 handler or not, although it appears to be the default with 5.2.  Yuck.

 J

 -- 
                     My other computer also runs NetBSD
                           http://www.netbsd.org/

From: Brett Lymn <blymn@baesystems.com.au>
To: Julian Coleman <jdc@coris.demon.co.uk>
Cc: wiz@netbsd.org, gnats-bugs@netbsd.org, blymn@netbsd.org
Subject: Re: lib/20032: libcurses: KEY_RESIZE missing
Date: Tue, 1 Apr 2003 09:47:55 +0930

 On Mon, Mar 31, 2003 at 10:26:01PM +0100, Julian Coleman wrote:
 > 
 > There doesn't appear to be a way to tell if ncurses has installed the
 > handler or not, although it appears to be the default with 5.2.  Yuck.
 > 

 Yuck indeed.  IMHO a library installing a signal handler automatically
 is just wrong... plain rude in my books.  I wonder if what we should
 do is create a function that installs the SIGWINCH for the caller and
 patch that into the programs that need it.

 -- 
 Brett Lymn
State-Changed-From-To: open->analyzed 
State-Changed-By: jdc 
State-Changed-When: Tue Apr 1 10:10:41 PST 2003 
State-Changed-Why:  
I'm looking into this. 


Responsible-Changed-From-To: lib-bug-people->jdc 
Responsible-Changed-By: jdc 
Responsible-Changed-When: Tue Apr 1 10:10:41 PST 2003 
Responsible-Changed-Why:  

From: Thomas Klausner <wiz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:  
Subject: pr/20032 CVS commit: pkgsrc/games/dopewars
Date: Sat, 12 Jul 2003 10:07:36 +0000 (UTC)

 Module Name:	pkgsrc
 Committed By:	wiz
 Date:		Sat Jul 12 10:07:35 UTC 2003

 Modified Files:
 	pkgsrc/games/dopewars: Makefile PLIST distinfo
 	pkgsrc/games/dopewars/patches: patch-ab patch-ac patch-ae

 Log Message:
 Update to 1.5.9. Depend on ncurses again because it's now using KEY_RESIZE
 (see PR lib/20032).
 Changes:
 This is largely a bugfix release, fixing a crash on pressing the
 "drop drugs" button, and adding minor improvements to the text-mode
 client.
 Fix PLIST while here.


 To generate a diff of this commit:
 cvs rdiff -r1.16 -r1.17 pkgsrc/games/dopewars/Makefile
 cvs rdiff -r1.3 -r1.4 pkgsrc/games/dopewars/PLIST
 cvs rdiff -r1.8 -r1.9 pkgsrc/games/dopewars/distinfo
 cvs rdiff -r1.4 -r1.5 pkgsrc/games/dopewars/patches/patch-ab \
     pkgsrc/games/dopewars/patches/patch-ae
 cvs rdiff -r1.3 -r1.4 pkgsrc/games/dopewars/patches/patch-ac

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.


From: Julian Coleman <jdc@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:  
Subject: pr/20032 CVS commit: src/lib/libcurses
Date: Mon, 22 Mar 2004 18:57:10 +0000 (UTC)

 Module Name:	src
 Committed By:	jdc
 Date:		Mon Mar 22 18:57:10 UTC 2004

 Modified Files:
 	src/lib/libcurses: curses_input.3 curses_screen.3 getch.c screen.c
 	    tstp.c

 Log Message:
 Add KEY_RESIZE support and a SIGWINCH handler.
 Fixes PR bin/20032.
 This requires a change to KEY_MAX, which affects libform and libmenu, so we
 need to change libcurses major number.


 To generate a diff of this commit:
 cvs rdiff -r1.14 -r1.15 src/lib/libcurses/curses_input.3
 cvs rdiff -r1.10 -r1.11 src/lib/libcurses/curses_screen.3
 cvs rdiff -r1.43 -r1.44 src/lib/libcurses/getch.c
 cvs rdiff -r1.15 -r1.16 src/lib/libcurses/screen.c
 cvs rdiff -r1.30 -r1.31 src/lib/libcurses/tstp.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: analyzed->closed 
State-Changed-By: wiz 
State-Changed-When: Fri Mar 26 21:30:18 UTC 2004 
State-Changed-Why:  
KEY_RESIZE added, two packages more compile with NetBSD's curses -- thanks! 
>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.51 2026/08/10 02:28:17 riastradh Exp $
$NetBSD: gnats_config.sh,v 1.10 2026/05/13 22:00:09 riastradh Exp $
Copyright © 1994-2026 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.