Add KEY_RESIZE support and a SIGWINCH handler. Fixes PR bin/20032. This requires a change to KEY_MAX, which affects libform and libmenu, so we need to change libcurses major number.